Add auth endpoints (#12)
* Add auth endpoints
